# mono_color_segmentation

./: CMakeLists.txt  README.md  package.xml
include/mono_color_segmentation/: mono_color_segmentation.hpp
launch/: turtlebot_world_segmentation.launch.py
src/: main.cpp  mono_color_segmentation.cpp
